math-core/tests/snapshots/conversion_test__colon_fusion.snap
---
source: math-core/tests/conversion_test.rs
expression: "a := 2 \\land b :\\equiv 3"
---
<math>
    <mi>a</mi>
    <mo lspace="0.2778em" rspace="0">:</mo>
    <mo lspace="0">=</mo>
    <mn>2</mn>
    <mo>∧</mo>
    <mi>b</mi>
    <mo lspace="0.2778em" rspace="0">:</mo>
    <mo lspace="0">≡</mo>
    <mn>3</mn>
</math>
