math-core/tests/snapshots/conversion_test__colon_last_group.snap
---
source: math-core/tests/conversion_test.rs
expression: "{x:}x"
---
<math>
    <mrow>
        <mi>x</mi>
        <mo lspace="0.2778em" rspace="0">:</mo>
    </mrow>
    <mi>x</mi>
</math>
