math-core/tests/snapshots/conversion_test__complicated_operatorname.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\operatorname {{\\pi} o \\Angstrom a}"
---
<math>
    <mo lspace="0" rspace="0">πoÅa</mo>
</math>
