math-core/tests/snapshots/conversion_test__double_colon.snap
---
source: math-core/tests/conversion_test.rs
expression: "a :: b"
---
<math>
    <mi>a</mi>
    <mo lspace="0.2778em" rspace="0">:</mo>
    <mo lspace="0" rspace="0.2778em">:</mo>
    <mi>b</mi>
</math>
