math-core/tests/snapshots/conversion_test__double_prime.snap
---
source: math-core/tests/conversion_test.rs
expression: "f''"
---
<math>
    <msup>
        <mi>f</mi>
        <mo>″</mo>
    </msup>
</math>
